// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render: Footer 1`] = `
<footer
  className="footer"
>
  <div
    className="footer__links"
  >
    <a
      href="https://discord.gg/XvFGctt"
    >
      <div
        className="icon--discord"
      />
    </a>
  </div>
  <p
    className="footer__updated"
  >
    Clan data last updated 
    49 years ago
    .
  </p>
  <p
    className="footer__credits"
  >
    @meliaesc
  </p>
</footer>
`;

exports[`render: Footer 2`] = `
<footer
  className="footer"
>
  <div
    className="footer__links"
  >
    <a
      href="https://discord.gg/XvFGctt"
    >
      <div
        className="icon--discord"
      />
    </a>
  </div>
  <p
    className="footer__updated"
  >
    Clan data from 
    2018-09-09
  </p>
  <p
    className="footer__credits"
  >
    @meliaesc
  </p>
</footer>
`;

exports[`render: Header 1`] = `
<header
  className="header"
>
  <div
    className="header__content"
  >
    <div
      className="header__brand"
    >
      <img
        className="header__brand--logo"
        src="./favicon.png"
      />
      <h1
        className="header__brand--title"
      />
    </div>
    <div
      className="header__links"
    >
      <Connect(ChooseWeek) />
      <a
        href="https://discord.gg/XvFGctt"
      >
        Discord
      </a>
      <a
        href="https://royaleapi.com/clan/PGVRPVG"
      >
        All Stats
      </a>
    </div>
  </div>
</header>
`;
